--- a/Transfer.Web/Views/Bus/Save.cshtml
+++ b/Transfer.Web/Views/Bus/Save.cshtml
@@ -163,10 +163,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-9 form-group">
+                        <div class="t-col col-8 col-md-9 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-3 form-group">
+                        <div class="t-col col-4 col-md-3 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
@@ -217,10 +217,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-9 form-group">
+                        <div class="t-col col-8 col-md-9 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-3 form-group">
+                        <div class="t-col col-4 col-md-3 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
@@ -272,10 +272,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-8 form-group">
+                        <div class="t-col col-8 col-md-9 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-4 form-group">
+                        <div class="t-col col-4 col-md-3 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
@@ -326,10 +326,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-10 form-group">
+                        <div class="t-col col-8 col-md-10 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-2 form-group">
+                        <div class="t-col col-4 col-md-2 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
@@ -347,10 +347,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-10 form-group">
+                        <div class="t-col col-8 col-md-10 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-2 form-group">
+                        <div class="t-col col-4 col-md-2 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
