--- a/Transfer.Web/Views/Carrier/Save.cshtml
+++ b/Transfer.Web/Views/Carrier/Save.cshtml
@@ -228,10 +228,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="t-col col-10 form-group">
+                        <div class="t-col col-8 col-md-10 form-group">
                             <input type="text" class="form-control file-result-name" readonly="readonly" />
                         </div>
-                        <div class="t-col col-2 form-group">
+                        <div class="t-col col-4 col-md-2 form-group">
                             <input type="file" class="form-control input-file">
                         </div>
                     </div>
