--- a/Transfer.Web/Views/Shared/_Layout.cshtml
+++ b/Transfer.Web/Views/Shared/_Layout.cshtml
@@ -216,7 +216,7 @@
                     <div class="row">
                         <div class="col-12 t-col text-end">
                             <button type="button" class="btn btn-default" data-bs-dismiss="modal" aria-label="Close">Отмена</button>
-                            <a class="btn btn-primary">Подтвердить</a>
+                            <a class="btn btn-primary" style="background-color: #007896; border: 0;">Подтвердить</a>
                         </div>
                     </div>
                     <div class="row blank-row"></div>
