--- a/Transfer.Web/Views/TripRequest/Save.cshtml
+++ b/Transfer.Web/Views/TripRequest/Save.cshtml
@@ -2,12 +2,12 @@
 @using Transfer.Common.Extensions
 
 @section Styles {
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.2.0/dist/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="~/source/select2.min.css" />
+    <link rel="stylesheet" href="~/source/select2-bootstrap-5-theme.min.css" />
 }
 @section Scripts {
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-<script src="~/js/TripRequest/Save.js" crossorigin="anonymous"></script>
+    <script src="~/source/select2.min.js"></script>
+    <script src="~/js/TripRequest/Save.js" crossorigin="anonymous"></script>
 }
 
 
