--- a/Transfer.Web/Views/Carrier/CarrierEdit.cshtml
+++ b/Transfer.Web/Views/Carrier/CarrierEdit.cshtml
@@ -2,15 +2,15 @@
 @using Transfer.Common.Extensions
 
 @section Styles {
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/css/fileinput.min.css" integrity="sha512-qPjB0hQKYTx1Za9Xip5h0PXcxaR1cRbHuZHo9z+gb5IgM6ZOTtIH4QLITCxcCp/8RMXtw2Z85MIZLv6LfGTLiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.2.0/dist/select2-bootstrap-5-theme.min.css" />
+    <link rel="stylesheet" href="~/source/fileinput.min.css" />
+    <link rel="stylesheet" href="~/source/select2.min.css" />
+    <link rel="stylesheet" href="~/source/select2-bootstrap-5-theme.min.css" />
 
 }
 
 @section Scripts {
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.2.7/js/fileinput.min.js" integrity="sha512-CCLv901EuJXf3k0OrE5qix8s2HaCDpjeBERR2wVHUwzEIc7jfiK9wqJFssyMOc1lJ/KvYKsDenzxbDTAQ4nh1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="~/source/fileinput.min.js" ></script>
+    <script src="~/source/select2.min.js" ></script>
     <script src="~/js/Carrier/Save.js" crossorigin="anonymous"></script>
     <script src="~/js/BasicSave.js" crossorigin="anonymous"></script>
 }
